--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@babel/core": "^7.24.6",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.24.6",
+    "@glidejs/glide": "^3.7.0",
+    "@types/glidejs__glide": "^3.6.5",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
@@ -37,9 +39,5 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
     "webpack-merge": "5.10.0"
-  },
-  "dependencies": {
-    "@glidejs/glide": "^3.6.2",
-    "inputmask": "^5.0.9"
   }
 }
