--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@glidejs/glide": "^3.7.0",
     "@types/glidejs__glide": "^3.6.5",
     "babel-loader": "^9.1.3",
+    "choices.js": "^11.0.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "cross-env": "^7.0.3",
@@ -31,6 +32,7 @@
     "imagemin-optipng": "^8.0.0",
     "imagemin-pngquant": "^10.0.0",
     "imagemin-svgo": "^11.0.1",
+    "inputmask": "^5.0.9",
     "mini-css-extract-plugin": "^2.9.0",
     "prettier": "3.3.2",
     "style-loader": "^4.0.0",
